# Gen_AI

./: .env.example  BLR_BOM.csv  DEPLOYMENT.md  Dockerfile  FINAL_SOLUTION_SUMMARY.md  OPTIMIZATION_REPORT.md  QUICK_START.md  README.md  README_AUTH.md  TRAVEL_SYSTEM_DEMO.md  app_vineet.py  chainlit_app.py  code_reference.csv  data_script.py  data_script_new.py  docker-compose.yml  find_available_hotels.py  flight_response.html  llm_script.py  notebook.ipynb  price_confirm.py  pyproject.toml  requirements.txt  run.py  start-dev.sh  temp_flight_styles.css  test.py  test_amadeus_hotel_apis.py  test_application_hotels.py  test_clean_format.py  test_formatting.py  test_hotel_api.py  test_hotel_api_simple.py  test_hotel_api_status.py  test_html_output.py  test_inr.py  test_markdown.py  test_mumbai_delhi.py  test_openai.py  test_openai_quota.py  (+5 more)
app/: main.py
app/api/: auth.py  chat.py  health.py  hotel.py  travel_itinerary.py  travel_streaming.py
app/core/: config.py  logging.py
app/middleware/: __init__.py  auth.py  auth_middleware.py
app/models/: schemas.py
app/services/: attractions_service.py  auth_service.py  chat_service.py  flight_service.py  hotel_service.py  intent_detection_service.py  itinerary_service.py  response_hierarchy_service.py  smart_streaming_service.py  streaming_travel_service.py  travel_parser_service.py  travel_service_optimized.py
app/templates/: auth.html  index.html  premium_booking.html  streaming_travel.html  travel_planner.html  (+1 more)
code with ui/: code_reference.csv  data_script_new.py  flights.csv  llm_script.py  ui.py  vk.csv
(+8 files in other folders)
